--- a/vue_coding/first_vue.html
+++ b/vue_coding/first_vue.html
@@ -125,7 +125,7 @@
 
         var webstore = new Vue({
             el : '#app',
-            components: {'myComponent': Component},
+            // components: {'myComponent': Component},
             data: {
                 sitename: 'vue.js 애완용품샵',
                 showProduct: true,
