--- a/vue_cdn/04router.html
+++ b/vue_cdn/04router.html
@@ -40,9 +40,8 @@
     ]
 
     const router = VueRouter.createRouter({
-      // 4. Provide the history implementation to use. We are using the hash history for simplicity here.
       history: VueRouter.createWebHashHistory(),
-      routes, // short for `routes: routes`
+      routes,
     });
 
 
