--- a/vue_cdn/03component.html
+++ b/vue_cdn/03component.html
@@ -9,26 +9,43 @@
 </head>
 
 <body>
-  <div id="my-app">
-    <p>{{message}}</p>
-    <my-component></my-component>
-  </div>
+  <div id="app">
+    <login-component></login-component>
 
+  </div>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
-  <script src="vue_common.js"></script>
-  <script type="text/javascript">
-    const app = createApp({
-      components: {
-        'my-component': Vue.defineAsyncComponent(() => loadModule('./my-component.vue', options))
+  <script>
+    const options = {
+      moduleCache: {
+        vue: Vue
       },
-      data() {
+      async getFile(url) {
+
+        const res = await fetch(url);
+        if (!res.ok)
+          throw Object.assign(new Error(res.statusText + ' ' + url), { res });
         return {
-          message: 'hello vue!'
+          getContentData: asBinary => asBinary ? res.arrayBuffer() : res.text(),
         }
+      },
+      addStyle(textContent) {
+
+        const style = Object.assign(document.createElement('style'), { textContent });
+        const ref = document.head.getElementsByTagName('style')[0] || null;
+        document.head.insertBefore(style, ref);
+      },
+    }
+
+    const { loadModule } = window['vue3-sfc-loader'];
+
+    const app = Vue.createApp({
+      components: {
+        'login-component': Vue.defineAsyncComponent(() => loadModule('./login.vue', options))
       }
-    })
-    app.mount('#my-app')
+    });
+    app.mount('#app');
+
   </script>
 </body>
 
