--- a/vue_cdn/03event.html
+++ b/vue_cdn/03event.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <title>Document</title>
 </head>
 
 <body>
@@ -15,6 +15,11 @@
     <div @click="parentevent">
       <div @click.stop="childevent">event test</div>
     </div>
+    <form>
+      <input>
+      <button @click.prevent="addOrder">구매</button>
+    </form>
+    <a href="http://www.naver.com" @click.prevent="addCart">장바구니</a>
   </div>
   <script>
     const { createApp } = Vue;
@@ -23,7 +28,9 @@
       mounted() { },
       methods: {
         parentevent() { alert("parent") },
-        childevent() { alert("child") }
+        childevent() { alert("child") },
+        addOrder() { alert("구매");   },
+        addCart() { alert("장바구니");   }
       }
     }).mount("#app")
   </script>
