--- a/vue_cdn/01life.html
+++ b/vue_cdn/01life.html
@@ -6,26 +6,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <div id="my-app">
+  <div id="app">
     <p>{{message}}</p>
   </div>
 
   <script type="text/javascript">
-    const { createApp } = Vue;
+    const {
+      createApp
+    } = Vue;
 
     const app = createApp({
       data() {
         return {
           message: 'hello vue!'
         }
-      }
+      },
+      created() {
+        console.log("create 됨");
+      },
+      mounted() {
+        console.log("mount 됨");
+      },
+      updated() {
+        console.log("update 됨");
+      },
     })
-    app.mount('#my-app')
+    app.mount('#app')
   </script>
 </body>
 
