--- a/vue_cdn/11component.html
+++ b/vue_cdn/11component.html
@@ -10,25 +10,24 @@
 
 <body>
   <div id="app">
-    <router-link to="/login">로그인</router-link>
-    <router-link to="/signin">회원가입</router-link>
-    </p>
+    <router-link to="/signin">로그인</router-link>
+    <router-link to="/product">상품정보</router-link>
     <router-view></router-view>
   </div>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://unpkg.com/vue-router@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
-  <script src="vue_common.js"></script>
+  <script src="load.js"></script>
   <script>
     const routes = [
-      { path: "/login", component: Vue.defineAsyncComponent(() => loadModule('./login.vue', options)) },
-      { path: "/signin", component: Vue.defineAsyncComponent(() => loadModule('./signin.vue', options)) },
+      { path: "/signin", component: Vue.defineAsyncComponent(() => loadModule('./my-signin.vue', options)) },
+      { path: "/product", component: Vue.defineAsyncComponent(() => loadModule('./my-product.vue', options)) },
     ]
     const router = VueRouter.createRouter({
       history: VueRouter.createWebHashHistory(),
       routes,
     });
-    const app = Vue.createApp({});
+    const app = Vue.createApp();
     app.use(router)
     app.mount('#app');
 
