--- a/vue_cdn/13vuex.html
+++ b/vue_cdn/13vuex.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
   <script src="load.js"></script>
   <script src="router.js"></script>
+  <script src="https://unpkg.com/vuex@4.0.0/dist/vuex.global.js"></script>
   <title>Document</title>
 </head>
 
@@ -30,12 +31,28 @@
 
   <script type="text/javascript">
     const {  createApp  } = Vue;
+    const {  createStore  } = Vuex;
+
+    // Create a new store instance.
+const store = createStore({
+  state () {
+    return {
+      count: 0
+    }
+  },
+  mutations: {
+    increment (state) {
+      state.count++
+    }
+  }
+})
+
 
     const app = createApp({
       data() {  return { }     },
       mounted() {  this.$router.push('/main')     }
     })
-    app.use(router);
+    app.use(router).use(store);
     app.mount('#app')
   </script>
 </body>
