--- a/vue_cdn/12router.html
+++ b/vue_cdn/12router.html
@@ -33,7 +33,7 @@
 
     const app = createApp({
       data() {  return { }     },
-      mounted() {  this.$router.push('/main')     }
+      mounted() {  this.$router.push('/')     }
     })
     app.use(router);
     app.mount('#app')
