--- a/vue_cdn/11router.html
+++ b/vue_cdn/11router.html
@@ -6,22 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="https://unpkg.com/vue-router@4"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
+  <script src="load.js"></script>  
 </head>
 
 <body>
   <div id="app">
-    <router-link to="/signin">로그인</router-link>
+    <router-link to="/signin">로그인</router-link> | 
     <router-link to="/product">상품정보</router-link>
     <router-view></router-view>
   </div>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="https://unpkg.com/vue-router@4"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader/dist/vue3-sfc-loader.js"></script>
-  <script src="load.js"></script>
   <script>
     const routes = [
-      { path: "/signin", component: Vue.defineAsyncComponent(() => loadModule('./my-signin.vue', options)) },
-      { path: "/product", component: Vue.defineAsyncComponent(() => loadModule('./my-product.vue', options)) },
+      { path: "/signin", component: Vue.defineAsyncComponent(() => loadModule('./components/my-signin.vue', options)) },
+      { path: "/product", component: Vue.defineAsyncComponent(() => loadModule('./components/my-product.vue', options)) },
     ]
     const router = VueRouter.createRouter({
       history: VueRouter.createWebHashHistory(),
