--- a/vue_cdn/homework/vue_count_options.html
+++ b/vue_cdn/homework/vue_count_options.html
@@ -8,15 +8,23 @@
 </head>
 <body>
     <div id="app">
-        <button @click="count++">
+        {{message}}
+        <button @click="increment">
             {{ count }}
         </button>
+    </div>
     <script>
         const {createApp} = Vue
         createApp({
             data(){
                 return {
-                    count:0
+                    count:0,
+                    message : 'Hello vue!!'
+                }
+            },
+            methods: {
+                increment() {
+                    this.count++
                 }
             }
         }).mount("#app")
