--- a/vue_cdn/02binding.html
+++ b/vue_cdn/02binding.html
@@ -21,6 +21,7 @@
         <p>가격 : {{product.price}}</p>  
         <p><input v-model="product.cnt" type="number"></p>
       </div>
+      <button v-show="product.canCart">장바구니</button>
     </div>
   </div>
 
