--- a/vue_cdn/homework/vue_count_options_module.html
+++ b/vue_cdn/homework/vue_count_options_module.html
@@ -12,7 +12,7 @@
         </button>
     </div>
     <script  type="module">
-        import { createApp, ref } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
+        import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
         createApp({
             data(){
                 return {
